--- a/tutorials/spde/spde-tutorial.bib
+++ b/tutorials/spde/spde-tutorial.bib
@@ -154,20 +154,58 @@ Approximations (with discussion)},
     url = {http://CRAN.R-project.org/package=splancs},
   }
 
-@Article{diggleMS:2010,
-  author = 	 {Diggle, P. J. and Menezes, R. and Su, T.},
-  title = 	 {Geostatistical inference under preferential sampling},
-  journal = 	 {Journal of the Royal Statistical Society, Series C},
-  year = 	 {2010},
-  volume = 	 {59},
-  number = 	 {2},
-  pages = 	 {191-232},
-}
-
 @Article{muffetal:2013,
   author = 	 {Muff, S. and Riebler, A. and Rue, H. and Saner, P. and Held, L.},
   title = 	 {Measurement error in GLMMs with INLA},
   journal = 	 {submitted},
   year = 	 {2013}
+}
+
+@article {diggleetal:2010,
+author = {Diggle, Peter J. and Menezes, Raquel and Su, Ting-li},
+title = {Geostatistical inference under preferential sampling},
+journal = {Journal of the Royal Statistical Society: Series C (Applied Statistics)},
+volume = {59},
+number = {2},
+publisher = {Blackwell Publishing Ltd},
+issn = {1467-9876},
+url = {http://dx.doi.org/10.1111/j.1467-9876.2009.00701.x},
+doi = {10.1111/j.1467-9876.2009.00701.x},
+pages = {191-232},
+keywords = {Environmental monitoring, Geostatistics, Log-Gaussian Cox process, 
+Marked point process, Monte Carlo inference, Preferential sampling},
+year = {2010},
+}
+
+@Article{illianetal:2012,
+  author = 	 {Illian, J. B. and S$\o$rbye, S. H. and Rue, H.},
+  title = 	 {A toolbox for fitting complex spatial point process 
+models using integrated nested Laplace approximation (INLA)},
+  journal = 	 {Annals of Applied Statistics},
+  year = 	 {2012},
+  volume = 	 {6},
+  number = 	 {4},
+  pages = 	 {1499-1530},
+}
+
+@Article{simpsonetal:2011,
+ author = {Simpson, D. P. and Illian, J. B. and Lindren, F. and S$\o$rbye, S. H and Rue, H.}, 
+ title = {Going off grid: Computationally efficient inference for log-Gaussian Cox processes},
+ journal = {submitted},
+ year = {2011},
+}
+
+@Article{lindgrenR:2013,
+  author = 	 {Lindgren, F. and Rue, H.},
+  title = 	 {Bayesian Spatial and Spatio-Temporal Modelling with R-INLA},
+  journal = 	 {Journal of Statistical Software},
+  year = 	 {2013},
+  OPTkey = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTpages = 	 {},
+  OPTmonth = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
 }
 
