--- a/tutorials/spde/spde-tutorial-jcovar.Rnw
+++ b/tutorials/spde/spde-tutorial-jcovar.Rnw
@@ -1,9 +1,9 @@
 \chapter{Joint modeling a covariate with misalignment}
 
+\SweaveOpts{prefix.string=figs/jcovar}
 \setkeys{Gin}{width=0.99\textwidth}
 <<sett,echo=F,results=hide>>=
-options(width=60, prompt = " ", continue = "   ")
-options(width=75)
+options(width=75, prompt = " ", continue = "   ")
 require(INLA)
 inla.setOption(inla.call='remote')
 require(geoR)
