--- a/tutorials/spde/spde-tutorial-nonstationar.Rnw
+++ b/tutorials/spde/spde-tutorial-nonstationar.Rnw
@@ -1,8 +1,8 @@
 \chapter{Non stationary model}
 
+\SweaveOpts{prefix.string=figs/nonstationar} 
 <<opts,echo=F,results=hide>>=
-options(width=60, prompt = " ", continue = "   ")
-options(width=75)
+options(width=75, prompt = " ", continue = "   ")
 require(INLA)
 require(gridExtra)
 lcall <- inla.getOption('inla.call')
